Fixed the title in "Collection" and some layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,10 @@ html {
     height: 75vh;
   }
 
+  .app-collection {
+    margin-top: 14rem;
+  }
+
   .app-why-us {
     height: 90vh;
   }
