--- a/src/Components/Collection/Collection.scss
+++ b/src/Components/Collection/Collection.scss
@@ -6,8 +6,6 @@
     align-items: center;
 
     .collection__title {
-        font-size: $forty;
-        font-family: $fraunces;
         margin-bottom: 4rem;
     }
 }
@@ -20,7 +18,7 @@
             font-size: 11.5rem;
             width: 90vw;
             text-align: center;
-            margin-bottom: -3.5rem;
+            margin-bottom: -1.5rem;
         }
     }
 }
@@ -28,8 +26,12 @@
 // Media query for desktop 
 @media screen and (min-width: 1024px) {
     .collection {
-        height: 60vh;
+        height: 80vh;
         margin-top: 4rem;
+
+        .collection__title {
+            margin-bottom: -4.5rem;
+        }
 
         .collection__cards {
             display: grid;
